tests/agl/rejections/type/partial_value_named_hole.agl
def add(a: int, b: int) -> int = a + b

let f: (int, int) -> int = add
let bad = f(a = ?)
